Trying to sort out the input field alignment issues in Android

--- a/ReckonMobileDevV04/resources/sass/app.scss
+++ b/ReckonMobileDevV04/resources/sass/app.scss
@@ -108,17 +108,22 @@ $include-list-highlights: none;
 			color: #969696;	
             background-color: inherit;
             font-size: 0.8em;
+            min-height: 3.2em; 
             //font-weight: bold;
-            padding-top: 0.9em;
+            //padding-top: 0.9em;
             padding-right: 0.6em;	
 		}
 	
 }
 
+.x-field-input {
+    overflow:hidden;
+}
+
 // Android Textfield input color fix 
 .x-android .x-input-el {
     -webkit-text-fill-color: $rm-default-color !important;
-    padding-top: 1.6em !important;    
+
     .rm-togglefield-off .x-field-input{                     
         padding-top: 1em !important;            
     }
@@ -132,11 +137,6 @@ $include-list-highlights: none;
 }
 .x-android .rm-togglefield-on .x-input-el {
   padding-top: 1.1em !important; 
-}
-
-//Android - to align clear icon in center 
-.x-android .x-field-input .x-clear-icon {
-    margin-top: -1.1em;
 }
 
 //For TextFields with flat look and white bg color in label and field, also icon on right side using bg image
@@ -164,8 +164,9 @@ $include-list-highlights: none;
             -webkit-text-fill-color: $rm-default-color;
             background-color: inherit;
             font-size: 0.8em;
+            min-height: 3.2em; 
             font-weight: bold;
-            padding-top: 0.9em;	
+            //padding-top: 0.9em;	
             padding-right: 0.6em;
 		}	
         
@@ -379,6 +380,9 @@ $include-list-highlights: none;
 }
 .rm-field-input-formatted {
     position:absolute; 
+    line-height: 3.2em; 
+    padding-top: 0;
+    padding-bottom: 0;
     top:0; 
     background:white !important;
 }
@@ -2035,7 +2039,7 @@ rm-emailinvoicebackground{
     width: 2.2em;
     height: 2.2em;
     margin: .5em;
-    margin-top: -0.9em;
+    margin-top: -1.1em;
     right: -.5em;
 }
 
